--- a/OpenGL.Net.SC2Profile.nuspec
+++ b/OpenGL.Net.SC2Profile.nuspec
@@ -10,9 +10,9 @@
         <projectUrl>https://github.com/luca-piccioni/OpenGL.Net</projectUrl>
         <iconUrl>http://github.com/luca-piccioni/OpenGL.Net/blob/master/OpenGL.Net-Logo.gif?raw=true</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <summary>Modern OpenGL bindings for C# - OpenGL SC 2.</summary>
+        <summary>Modern OpenGL bindings for C  - OpenGL SC 2.</summary>
         <description>
-Modern OpenGL bindings for C#.
+Modern OpenGL bindings for C*.
 
 It supports OpenGL 4.6 with relative extensions, OpenGL for Windows (WGL) with relative extensions, OpenGL for X11 1.4 (XGL) with relative extensions, Native Platform Interface 1.5 (EGL) with relative extensions, Broadcom VideoCore IV (Raspberry PI 2). Specifications updated to Aug 5, 2017.
 
@@ -59,8 +59,8 @@ Note: this package has removed a specific a subset of the OpenGL specification. 
     </metadata>
     <files>
         <file src="OpenGL.Net/bin/net35/Release/OpenGL.Net-SC2Profile.dll" target="lib\net35" />
-        <!--<file src="OpenGL.Net/bin/net35/Release/OpenGL.Net-ES2Profile.xml" target="lib\net35" />-->
+        < --<file src="OpenGL.Net/bin/net35/Release/OpenGL.Net-ES2Profile.xml" target="lib\net35" />-->
         <file src="OpenGL.Net/bin/net461/Release/OpenGL.Net-SC2Profile.dll" target="lib\net461" />
         <!--<file src="OpenGL.Net/bin/net461/Release/OpenGL.Net-ES2Profile.xml" target="lib\net461" />-->
     </files>
-</package>
+</package> 
